<resources>
    <string name="app_name">Biodata</string>
    <string name="title_profile">Profile</string>
    <string name="title_contact">Kontak</string>
    <string name="title_daftarteman">Daftar Teman</string>
    <string name="fotoprofile">fotoprofile</string>
    <string name="ricky_abidin">Ricky Abidin</string>
    <string name="NIM">10116169</string>
    <string name="kelas">IF-4</string>
    <string name="deskripsi">Saya adalah seorang Pria</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="slide_2_title">slide2title</string>
    <string name="slide_1_desc">slide1desc</string>
    <string name="slide_3_title">slide3title</string>
    <string name="start">start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
